--- a/.github/workflows/CMCC-RAX3000M-Lede.yml
+++ b/.github/workflows/CMCC-RAX3000M-Lede.yml
@@ -4,7 +4,7 @@ name: CMCC-RAX3000M-Lede
 on:
   #自动编译：每天早上4点
   schedule:
-    - cron: 0 20 1 * *
+    - cron: 0 20 1 12 *
   #手动编译
   workflow_dispatch:
 
